--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     </header>
     <section>
         <div class="sup-img" id="imagenes" style="">
-            <img src="zonas/mapOOO.jpg" alt="Cannot charge" class="sup-img" style="z-index: 2;" >
-            <img src="zonas/desierto.png" alt="Cannot charge" class="sup-img" style="z-index: 1;" id="desierto_img">
+            <img src="zonas/mapOOO.jpg" alt="Cannot charge" class="sup-img" style="z-index: 1;" >
+            <img src="zonas/desierto.png" alt="Cannot charge" class="sup-img" style="z-index: 2;" id="desierto_img">
         
         </div>
     </section>
 
    
     <aside>
-        <h1 id="desierto">Desierto</h1>
+        <h1 id="desierto" class="l" href="">Desierto</h1>
         <h1 id="tierra_fuego">Tierra de fuego</h1>
     </aside>
 
