Experimental click to information

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <div id="div_zones">
         
-        <h1 id="slots" class="hover-zone"> Cloud Forest</h1>
+        <h1 id="slots" class="hover-zone"*> Cloud Forest</h1>
         <h1 id="slots" class="hover-zone"> The Sea of Something </h1>
         <h1 id="slots" class="hover-zone"> The Uknown Lands</h1>
         <h1 id="slots" class="hover-zone"> The Skiney Isles</h1>
@@ -38,9 +38,16 @@
         <h1 id="slots" class="hover-zone"> Isle of Steam</h1>
         <h1 id="slots" class="hover-zone"> Bad Lands</h1>
         <h1 id="slots" class="hover-zone"> Chicken Blood Cove</h1>
-        <h1 id="slots" class="hover-zone"> Sea of Sure Deathadios</h1>
-        <h1 id="slots" class="hover-zone"> Whirlpool of Shaks</h1>
+        <h1 id="slots" class="hover-zone"> Sea of Sure Death</h1>
+        <h1 id="slots" class="hover-zone"> Whirlpool of Sharks</h1>
         <h1 id="slots" class="hover-zone"> The Squid Ink Sea</h1>
+    </div>
+    <!--Menu experimental-->>
+    <div class="overlay">
+        <div class="info">
+            <p>asdasdasdasdasdasdasdasdadasdad</p>
+        </div>
+        <img src="images/14034319.png" alt="Close" class="close-button">
     </div>
 </body>
 
