--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <title>English Project</title>
     <link rel="stylesheet" href="index.css">
-    <script src="hover.js" defer></script>
+    <script src="general.js" defer></script>
 </head>
 
 <body>
