Adicion JS, no testeado

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <!-- <img src="" id="imgMessage"> -->
     <div id="div_map">
         <img class="img_class" src="images/mapOOO.jpg" alt="Map of Ooo" id="map" >
-        <img class="img_class" src="images/cloudForest.png" alt="cloud_forest" id="cloud_forest_img" style="filter:drop-shadow(0px 0px 20px crimson),contrast(150%);">
-        <img class="img_class" src="images/theShineyIsles.png" alt="the_shiney_isles" id="the_shiney_isles_img" >
+        <img class="img_class" src="images/cloudForest.png" alt="cloud_forest" id="cloud_forest_img">
+        <img class="img_class" src="images/theShineyIsles.png" alt="the_shiney_isles" id="shiney_isles_img" >
         <img class="img_class" src="images/candyMountains.png" alt="rock_candy_mountains" id="rock_candy_mountains_img">
         <img class="img_class" src="images/mountainKingdom.png" alt="mountain_kingdom" id="mountain_kingdom_img">
         <img class="img_class" src="images/theCaves.png" alt="caves" id="caves_img">
