--- a/index.html
+++ b/index.html
@@ -73,9 +73,26 @@
         <h1 class="slots" id="chicken_blood_cove" > Chicken Blood Cove</h1>
         <h1 class="slots" id="sea_of_sure_death" > Sea of Sure Death</h1>
         <h1 class="slots" id="whirlpool_of_sharks" > Whirlpool of Sharks</h1>
-        <!--Experimental, factible-->
         <h1 class="slots" id="hole_near_the_center_of_the_world" > Hole Near the Center<br>of the World</h1>
     </div>
+    <!--Comentarios-->
+    <div class="div_comments">
+        <script 
+            src="https://giscus.app/client.js" 
+            data-repo="PauMasia/TLab.github.io" 
+            data-repo-id="R_kgDOLsyknA"
+            data-category="Announcements" 
+            data-category-id="DIC_kwDOLsyknM4CfQ6R" 
+            data-mapping="pathname" 
+            data-strict="0"
+            data-reactions-enabled="0"
+            data-emit-metadata="0" 
+            data-input-position="top" 
+            data-theme="light"
+            data-lang="es" 
+            crossorigin="anonymous"
+            async >
+        </script>
     <!--Menu experimental, factible-->
     <div id="overlay">
         <div class="info_cloud_forest">
