Changes from /src to src

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <title>English Project</title>
-    <link rel="stylesheet" href="/src/styles/index.css">
-    <script src="/src/js/general.js" defer></script>
+    <link rel="stylesheet" href="src/styles/index.css">
+    <script src="src/js/general.js" defer></script>
 </head>
 
 <body>
     <!-- <div id="backOfMessage">
-        <img src="/src/static/images/Adventure_Time_logo.png" alt="" id="logoImage">
+        <img src="src/static/images/Adventure_Time_logo.png" alt="" id="logoImage">
 
         <div id="messageNoResponsive">
             <h1 id="h1_message">This project is made for a single person, I made it with pure <a id="HTML">HTML</a>,<a id="JS">JS</a> and <a id="CSS"> CSS</a>, I wish you like it, it took me more than X hours.Texto texto texto texto texto
@@ -24,30 +24,30 @@
 
 <!-- <img src="" id="imgMessage"> -->
     <div id="div_map">
-        <img class="img_class" src="/src/static/images/mapOOO.jpg" alt="Map of Ooo" id="map" >
-        <img class="img_class" src="/src/static/images/cloudForest.png" alt="cloud_forest" id="cloud_forest_img">
-        <img class="img_class" src="/src/static/images/theShineyIsles.png" alt="the_shiney_isles" id="shiney_isles_img" >
-        <img class="img_class" src="/src/static/images/candyMountains.png" alt="rock_candy_mountains" id="rock_candy_mountains_img">
-        <img class="img_class" src="/src/static/images/mountainKingdom.png" alt="mountain_kingdom" id="mountain_kingdom_img">
-        <img class="img_class" src="/src/static/images/theCaves.png" alt="caves" id="caves_img">
-        <img class="img_class" src="/src/static/images/theUnknownLands.png" alt="uknown_lands" id="uknown_lands_img">
-        <img class="img_class" src="/src/static/images/candyKingdom.png" alt="candy_kingdom" id="candy_kingdom_img">
-        <img class="img_class" src="/src/static/images/iceKingdom.png" alt="ice_kingdom" id="ice_kingdom_img">
-        <img class="img_class" src="/src/static/images/grassLands.png" alt="grass_lands" id="grass_lands_img">
-        <img class="img_class" src="/src/static/images/seaOfSomething.png" alt="sea_of_something" id="sea_of_something_img">
-        <img class="img_class" src="/src/static/images/hauntedSwamp.png" alt="haunted_swamp" id="haunted_swamp_img">
-        <img class="img_class" src="/src/static/images/spookyForest.png" alt="spooky_forest" id="spooky_forest_img">
-        <img class="img_class" src="/src/static/images/theSquidInkSea.png" alt="squid_ink_sea" id="squid_ink_sea_img">
-        <img class="img_class" src="/src/static/images/kingdomOfFire.png" alt="kingdom_of_fire" id="kingdom_of_fire_img">
-        <img class="img_class" src="/src/static/images/lostCliffs.png" alt="lost_cliffs" id="lost_cliffs_img">
-        <img class="img_class" src="/src/static/images/desertLands.png" alt="desert_lands" id="desert_lands_img">
-        <img class="img_class" src="/src/static/images/floatingGems.png" alt="floating_gems" id="floating_gems_img">
-        <img class="img_class" src="/src/static/images/isleOfSteam.png" alt="isle_of_steam" id="isle_of_steam_img">
-        <img class="img_class" src="/src/static/images/badLands.png" alt="bad_lands" id="bad_lands_img">
-        <img class="img_class" src="/src/static/images/chickenBloodCove.png" alt="chicken_blood_cove" id="chicken_blood_cove_img">
-        <img class="img_class" src="/src/static/images/seaOfSureDeath.png" alt="sea_of_sure_death" id="sea_of_sure_death_img">
-        <img class="img_class" src="/src/static/images/whirlpoolOfSharks.png" alt="whirlpool_of_sharks" id="whirlpool_of_sharks_img">
-        <img class="img_class" src="/src/static/images/theHoleNearthecenteroftheWorld.png" alt="hole_near_the_center_of_the_world" id="hole_near_the_center_of_the_world_img">
+        <img class="img_class" src="src/static/images/mapOOO.jpg" alt="Map of Ooo" id="map" >
+        <img class="img_class" src="src/static/images/cloudForest.png" alt="cloud_forest" id="cloud_forest_img">
+        <img class="img_class" src="src/static/images/theShineyIsles.png" alt="the_shiney_isles" id="shiney_isles_img" >
+        <img class="img_class" src="src/static/images/candyMountains.png" alt="rock_candy_mountains" id="rock_candy_mountains_img">
+        <img class="img_class" src="src/static/images/mountainKingdom.png" alt="mountain_kingdom" id="mountain_kingdom_img">
+        <img class="img_class" src="src/static/images/theCaves.png" alt="caves" id="caves_img">
+        <img class="img_class" src="src/static/images/theUnknownLands.png" alt="uknown_lands" id="uknown_lands_img">
+        <img class="img_class" src="src/static/images/candyKingdom.png" alt="candy_kingdom" id="candy_kingdom_img">
+        <img class="img_class" src="src/static/images/iceKingdom.png" alt="ice_kingdom" id="ice_kingdom_img">
+        <img class="img_class" src="src/static/images/grassLands.png" alt="grass_lands" id="grass_lands_img">
+        <img class="img_class" src="src/static/images/seaOfSomething.png" alt="sea_of_something" id="sea_of_something_img">
+        <img class="img_class" src="src/static/images/hauntedSwamp.png" alt="haunted_swamp" id="haunted_swamp_img">
+        <img class="img_class" src="src/static/images/spookyForest.png" alt="spooky_forest" id="spooky_forest_img">
+        <img class="img_class" src="src/static/images/theSquidInkSea.png" alt="squid_ink_sea" id="squid_ink_sea_img">
+        <img class="img_class" src="src/static/images/kingdomOfFire.png" alt="kingdom_of_fire" id="kingdom_of_fire_img">
+        <img class="img_class" src="src/static/images/lostCliffs.png" alt="lost_cliffs" id="lost_cliffs_img">
+        <img class="img_class" src="src/static/images/desertLands.png" alt="desert_lands" id="desert_lands_img">
+        <img class="img_class" src="src/static/images/floatingGems.png" alt="floating_gems" id="floating_gems_img">
+        <img class="img_class" src="src/static/images/isleOfSteam.png" alt="isle_of_steam" id="isle_of_steam_img">
+        <img class="img_class" src="src/static/images/badLands.png" alt="bad_lands" id="bad_lands_img">
+        <img class="img_class" src="src/static/images/chickenBloodCove.png" alt="chicken_blood_cove" id="chicken_blood_cove_img">
+        <img class="img_class" src="src/static/images/seaOfSureDeath.png" alt="sea_of_sure_death" id="sea_of_sure_death_img">
+        <img class="img_class" src="src/static/images/whirlpoolOfSharks.png" alt="whirlpool_of_sharks" id="whirlpool_of_sharks_img">
+        <img class="img_class" src="src/static/images/theHoleNearthecenteroftheWorld.png" alt="hole_near_the_center_of_the_world" id="hole_near_the_center_of_the_world_img">
         <h1 id="bibref"><a href="bibcon.html">Bibliography</a>    ·    <a href="bibcon.html">Content references</a></h1>
         
 
@@ -100,7 +100,7 @@
     </div>
     <!--Menu experimental, factible-->
     <div id="overlay_menu">
-            <img src="/src/static/images/14034319.png" alt="Close"  id="close">
+            <img src="src/static/images/14034319.png" alt="Close"  id="close">
 
             <div class="info_menu">
                 <h1>Cloud Forest</h1>
