bibcon url redirect change

--- a/bibcon.html
+++ b/bibcon.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="src/styles/bibref.css">
 </head>
 <body>
-    <h1 id="index"><a href="index.html">RETURN BACK</a></h1>
+    <h1 id="index"><a href="https://paumasia.github.io/TLab.github.io/">RETURN BACK</a></h1>
     <div id="bib" class="infoSection">
         <h1>Bibliography</h1>
         <ul>
