--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>English Project</title>
     <link rel="stylesheet" href="src/styles/index.css">
     <script src="src/js/general.js" defer></script>
+    <script src="src/js/favicon.js" async></script>
 </head>
 
 <body>
