Added changes to display

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <h1 class="slots" id="sea_of_sure_death" > Sea of Sure Death</h1>
         <h1 class="slots" id="whirlpool_of_sharks" > Whirlpool of Sharks</h1>
         <h1 class="slots" id="hole_near_the_center_of_the_world" > Hole Near the Center<br>of the World</h1>
+        <h1 class="slots" id="needed"></h1>
     </div>
     <!--Comentarios-->
     <div class="div_comments">
@@ -102,7 +103,7 @@
     <!--Menu experimental, factible-->
     <div id="overlay_menu">
             <img src="src/static/images/14034319.png" alt="Close"  id="close">
-
+                
             <div class="info_menu">
                 <h1>Cloud Forest</h1>
                 <p>The Cloud Forest is a mystical realm cloaked in perpetual mist, where ancient trees loom tall and mysterious creatures dwell. Its lush canopy shelters a myriad of secrets waiting to be discovered by brave adventurers. Journey through its winding paths and unravel the mysteries that lie within.</p>
