index.html with message

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 </head>
 
 <body>
-    <!-- <div id="backOfMessage">
+    <div id="backOfMessage">
         <img src="src/static/images/Adventure_Time_logo.png" alt="" id="logoImage">
 
         <div id="messageNoResponsive">
-            <h1 id="h1_message">This project is made for a single person, I made it with pure <a id="HTML">HTML</a>,<a id="JS">JS</a> and <a id="CSS"> CSS</a>, I wish you like it, it took me more than X hours.Texto texto texto texto texto
+            <h1 id="h1_message">This project is made for a single person, I made it with pure <a id="HTML">HTML</a>,<a id="JS">JS</a> and <a id="CSS"> CSS</a>, I wish you like it, it took me more than 33 hours.<br> Comment if you want :D.
             <br>
             <button onclick="document.getElementById('backOfMessage').style.display='none'"
             id="buttonCloseMessage" >Close</button>
             </h1>
         </div>
-    </div> -->
+    </div>
 
 <!-- <img src="" id="imgMessage"> -->
     <div id="div_map">
