Finish version for upload, not finished

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="src/static/images/Adventure_Time_logo.png" alt="" id="logoImage">
 
         <div id="messageNoResponsive">
-            <h1 id="h1_message">This project is made for a single person, I made it with pure <a id="HTML">HTML</a>,<a id="JS">JS</a> and <a id="CSS"> CSS</a>, I wish you like it, it took me more than 33 hours.<br> Comment if you want :D.
+            <h1 id="h1_message">This project is made by a single person, I made it with pure <a id="HTML">HTML</a>,<a id="JS">JS</a> and <a id="CSS"> CSS</a>, I wish you like it, it took me more than 33 hours, the web is not finished yet.<br> Comment if you can. <br>I will upload the videos at the right of this menu by the Wednesday or Friday
             <br>
             <button onclick="document.getElementById('backOfMessage').style.display='none'"
             id="buttonCloseMessage" >Close</button>
